[gd_scene load_steps=4 format=3 uid="uid://bqgx1xqk8xgn5"]

[ext_resource type="Script" uid="uid://bli8hows215bj" path="res://main.gd" id="1_0v8xj"]
[ext_resource type="PackedScene" uid="uid://cj8vy8k1vw5kw" path="res://player.tscn" id="2_1h2vx"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 24

[node name="Main" type="Node2D"]
script = ExtResource("1_0v8xj")

[node name="Player" parent="." instance=ExtResource("2_1h2vx")]
position = Vector2(400, 550)

[node name="GemSpawnTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -40.0
offset_right = 150.0
offset_bottom = -10.0
text = "Score: 0"
label_settings = SubResource("LabelSettings_1")

[node name="GameOverLabel" type="Label" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 50.0
text = "GAME OVER"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1
vertical_alignment = 1
